--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -1,20 +1,27 @@
 .navigation {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   list-style: none;
   padding: 0;
   margin: 0;
   height: 20vh;
   max-height: 100px;
-  font-size: 1.25em;
+  font-size: 1.0em;
 }
 
 .navigationItem {
   display: inline-flex;
   align-items: center;
   margin: 0 1em;
+  opacity: 0.4;
+  transition: opacity 0.5s;
+}
+
+.navigationItem:hover {
+  opacity: 1;
 }
 
 .navigationItem a {
-  color: currentColor;
+  color: #000;
+  text-decoration: none;
 }
