--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -1,3 +1,9 @@
+.navContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .navigation {
   display: flex;
   justify-content: flex-end;
@@ -24,4 +30,8 @@
 .navigationItem a {
   color: #000;
   text-decoration: none;
+}
+
+.logo {
+  height: 100px;
 }
