--- a/src/components/base.css
+++ b/src/components/base.css
@@ -27,6 +27,11 @@ h3 {
   font-weight: normal;
 }
 
+h3 {
+  margin-top: .3em;
+  margin-bottom: .3em;
+}
+
 a {
   color: currentColor;
 }
@@ -54,7 +59,7 @@ a {
  */
 .section-headline {
   padding: 0 0 0.4em 0;
-  margin: 0 0 5vmin 0;
+  margin: 0 0 3vmin 0;
   border-bottom: 1px solid #ddd;
 }
 
